style(feature__xs): fix white space
This commit is to remove white spaces in the feature info and image
blocks for xs screens.

The change will ensure that the two blocks on the page renders well on
xs devices and window or screen sizes.

--- a/style.css
+++ b/style.css
@@ -826,7 +826,7 @@ vertical-align: top;
   width: 100%;
   justify-content: center;
   align-items: center;
-  padding-top: 5rem;
+  padding-top: 3rem;
 }
 
 .main__feature {
@@ -835,7 +835,8 @@ vertical-align: top;
   display: flex;
   flex-direction: column-reverse;
   justify-content: center;
-  gap: 4.5rem;
+  gap: 1.5rem;
+  margin-bottom:2rem;
 }
 
 .feature__image-block {
@@ -866,7 +867,7 @@ vertical-align: top;
 }
 
 .feature__info-heading {
-  font-size: 2.7rem;
+  font-size: 2.4rem;
   color: #000000;
   font-weight: 600;
   line-height:1.2;
@@ -880,7 +881,7 @@ vertical-align: top;
 }
 
 .feature__info-text {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
 }
 
 .feature__link-block {
@@ -891,7 +892,7 @@ vertical-align: top;
 }
 
 .feature__link {
-  font-size: 1.7rem;
+  font-size: 1.4rem;
   text-decoration: underline;
   font-weight:600;
 }
